<resources>
    <string name="app_name">Agribiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="add_photo_camera">Add Photo Camera</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="do_you_want_to_change_password">Do you want to change password?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dummy_name">Dummy Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="view_order_history">View Order History</string>
    <string name="to_prepare">To Prepare</string>
    <string name="to_ship">To Ship</string>
    <string name="to_receive">To Receive</string>
    <string name="rate_orders">Rate Orders</string>
    <string name="my_addresses">My Addresses</string>
    <string name="messages">Messages</string>
    <string name="barter_goods">Barter Goods</string>
    <string name="logout">Logout</string>
    <string name="resetPassword">Reset Password</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="submit">Submit</string>
    <string name="verification_text_dialog">A verification code is sent by SMS to 09567724913</string>
    <string name="cancel">Cancel</string>
    <string name="new_mobile_number">New mobile number</string>
    <string name="update">Update</string>
    <string name="enter_new_mobile_number">Enter New Mobile Number</string>
    <string name="_9xxxxxxxx">9X-XXX-XXXX</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="title_activity_barter_goods">BarterGoodsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="barter_produce">Barter Products</string>
    <string name="no_barter_requests_yet">No barter requests yet</string>
    <string name="item_condition">Item condition:</string>
</resources>