<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer.EditProfile">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/top_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

                <TextView
                    android:id="@+id/editProfile_save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_cl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/army_green"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="50dp">

                <FrameLayout
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@color/transparent">

                    <ImageView
                        android:id="@+id/profile_iv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_red_11"
                        android:backgroundTint="@color/white"
                        android:src="@drawable/ic_round_account_circle_70"
                        android:contentDescription="@string/profile_photo">

                    </ImageView>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="25dp"
                        android:background="@color/transparent"
                        android:src="@drawable/ic_baseline_add_a_photo_24"
                        app:tint="@color/yellow_orange"
                        android:contentDescription="@string/add_photo_camera" />

                </FrameLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userName_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/army_green"
                    app:boxBackgroundColor="@color/transparent"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeColor="@color/army_green"
                    app:hintTextColor="@color/army_green">

                    <EditText
                        android:id="@+id/userName_et"
                        style="TextAppearance.App.TextIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/username"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:paddingTop="20dp"
                        android:textColorHint="@color/color_hint"
                        android:textCursorDrawable="@null"
                        android:textSize="16sp"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/army_green"
                    app:boxBackgroundColor="@color/transparent"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeColor="@color/army_green"
                    app:hintTextColor="@color/army_green">

                    <EditText
                        android:id="@+id/email_et"
                        style="TextAppearance.App.TextIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:paddingTop="20dp"
                        android:textColorHint="@color/color_hint"
                        android:textCursorDrawable="@null"
                        android:textSize="16sp"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/number_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/army_green"
                    app:boxBackgroundColor="@color/transparent"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeColor="@color/army_green"
                    app:hintTextColor="@color/army_green">

                    <EditText
                        android:id="@+id/number_et"
                        style="TextAppearance.App.TextIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/mobile_number"
                        android:importantForAutofill="no"
                        android:inputType="phone"
                        android:paddingTop="20dp"
                        android:maxLength="10"
                        android:drawableStart="@drawable/number_prefix"
                        android:textColorHint="@color/color_hint"
                        android:textCursorDrawable="@null"
                        android:textSize="16sp"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/do_you_want_to_change_password"
                    android:textColor="@color/brown"
                    android:textFontWeight="600"
                    android:textSize="15sp"
                    tools:ignore="UnusedAttribute" />

                <RadioGroup
                    android:id="@+id/radioYesNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:buttonTint="@color/army_green"
                        android:text="@string/no"
                        android:checked="true"
                        android:textColor="@color/brown"
                        android:textSize="15sp"/>

                    <RadioButton
                        android:id="@+id/radioYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/army_green"
                        android:text="@string/yes"
                        android:textColor="@color/brown"
                        android:textSize="15sp" />

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/army_green"
                    app:boxBackgroundColor="@color/transparent"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeColor="@color/army_green"
                    app:hintTextColor="@color/army_green"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password_et"
                        style="TextAppearance.App.TextIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingTop="20dp"
                        android:textColorHint="@color/color_hint"
                        android:textCursorDrawable="@null"
                        android:textSize="16sp"
                        tools:ignore="SpeakableTextPresentCheck"
                        android:enabled="false"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/con_password_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/army_green"
                    app:boxBackgroundColor="@color/transparent"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeColor="@color/army_green"
                    app:hintTextColor="@color/army_green"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/con_password_et"
                        style="TextAppearance.App.TextIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/confirm_password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingTop="20dp"
                        android:textColorHint="@color/color_hint"
                        android:textCursorDrawable="@null"
                        android:textSize="16sp"
                        tools:ignore="SpeakableTextPresentCheck"
                        android:enabled="false"/>

                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/enter_code"
                    android:hint="Enter code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <Button
                    android:id="@+id/verify_code_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Verify code"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>